Bump JLyrics, youtubedl-java